--- a/TestProject/templates/classe/home.html.twig
+++ b/TestProject/templates/classe/home.html.twig
@@ -51,7 +51,7 @@
                         <div class="header-half header-call">
                             <p>
                                 <span><i class="pe-7s-call"></i> +1 234 567 7890</span>
-                                <span><i class="pe-7s-mail"></i> your@company.com</span>
+                                <span><i class="pe-7s-mail"></i> Besttrip@gmail.com</span>
                             </p>
                         </div>
                     </div>
@@ -82,14 +82,14 @@
                         <span class="icon-bar"></span>
                         <span class="icon-bar"></span>
                     </button>
-                    <a class="navbar-brand" href=""><img src="{{ asset('assets/img/logo.png') }}" alt=""></a>
+                    <a class="navbar-brand" href=""><img class="logo1" src="{{ asset('images/besttrip5.png') }}" alt=""></a>
                 </div>
 
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse yamm" id="navigation">
                     <div class="button navbar-right">
-                        <button class="navbar-btn nav-button wow bounceInRight login" onclick=" window.open('register.html')" data-wow-delay="0.45s">Login</button>
-                        <button class="navbar-btn nav-button wow fadeInRight" onclick=" window.open('submit-property.html')" data-wow-delay="0.48s">Submit</button>
+                        <a class="navbar-btn nav-button wow bounceInRight login"href="{{path('register')}}"  data-wow-delay="0.45s">Login</a>
+                        <a class="navbar-btn nav-button wow fadeInRight" href="{{path('login')}}" data-wow-delay="0.48s">Submit</a>
                     </div>
                     <ul class="main-nav nav navbar-nav navbar-right">
                         <li class="dropdown ymm-sw " data-wow-delay="0.1s">
