--- a/TestProject/templates/commentaire/_form.html.twig
+++ b/TestProject/templates/commentaire/_form.html.twig
@@ -1,4 +1,49 @@
-{{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
-{{ form_end(form) }}
+<div class="card-body card-block">
+        {{ form_start(form,{'attr':{'novalidate':'novalidate'}},{'attr':{'class':'form-horizontal'}}) }}
+            <div class="row form-group">
+                <div class="col col-md-3">
+                    {{ form_label(form.contenu,"contenu :") }}
+                </div>
+                <div class="col-12 col-md-9">
+                    {{ form_widget(form.contenu,{'attr':{'class':'form-control'}})}}
+                    {% if form_errors(form.contenu) is not empty %}
+                        <small class="form-text text-muted">{{ form_errors(form.contenu) }}</small>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col col-md-3">
+                    {{ form_label(form.nom,"nom :") }}
+                </div>
+                <div class="col-12 col-md-9">
+                    {{ form_widget(form.nom,{'attr':{'class':'form-control'}})}}
+                    {% if form_errors(form.nom) is not empty %}
+                        <small class="form-text text-muted">{{ form_errors(form.nom) }}</small>
+                    {% endif %}
+                </div>
+            </div>
+            <div class="row form-group">
+                <div class="col col-md-3">
+                    {{ form_label(form.datenow,"datenow :") }}
+                </div>
+                <div class="col-12 col-md-9">
+                    {{ form_widget(form.datenow,{'attr':{'class':'form-control'}})}}
+                    {% if form_errors(form.datenow) is not empty %}
+                        <small class="form-text text-muted">{{ form_errors(form.datenow) }}</small>
+                    {% endif %}
+                </div>
+            </div>
+            
+           
+
+            <div align="center" class="card-footer">
+                <button class="btn"><i class="zmdi zmdi-plus"></i>{{ button_label|default('Ajouter') }}</button>
+                <button class="btn"><a style="color:black;" href="{{ path('app_commentaire_index') }}">Consulter Liste</a></button>
+            </div>
+        {{ form_end(form) }}
+    </div>
+
+
+
+
+
