--- a/TestProject/templates/post/edit.html.twig
+++ b/TestProject/templates/post/edit.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'dashboard/dash.html.twig' %}
 
-{% block title %}Edit Post{% endblock %}
+{% block title %}Commentaire index{% endblock %}
 
 {% block body %}
     <h1>Edit Post</h1>
