--- a/TestProject/templates/post/index.html.twig
+++ b/TestProject/templates/post/index.html.twig
@@ -1,6 +1,6 @@
-{% extends 'base.html.twig' %}
+{% extends 'dashboard/dash.html.twig' %}
 
-{% block title %}Post index{% endblock %}
+{% block title %}Commentaire index{% endblock %}
 
 {% block body %}
     <h1>Post index</h1>
