--- a/TestProject/templates/circuit/clientCircuit.html.twig
+++ b/TestProject/templates/circuit/clientCircuit.html.twig
@@ -41,7 +41,7 @@
   <nav class="site-nav">
     <div class="container">
       <div class="site-navigation">
-        <a href="index.html" class="logo m-0">Tour <span class="text-primary">.</span></a>
+        <a href="index.html" class="logo m-0">Best-Trip <span class="text-primary">.</span></a>
 
         <ul class="js-clone-nav d-none d-lg-inline-block text-left site-menu float-right">
           <li><a href="index.html">Home</a></li>
@@ -80,8 +80,8 @@
       <div class="row align-items-center">
         <div class="col-lg-6 mx-auto text-center">
           <div class="intro-wrap">
-            <h1 class="mb-0">Our Services</h1>
-            <p class="text-white">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+            <h1 class="mb-0">Où voyageons-nous aujourd'hui ?</h1>
+            <p class="text-white">Profiter de la Vie</p>
           </div>
         </div>
       </div>
@@ -168,8 +168,8 @@
               <p>Depart : {{ circuit.depart }}</p>
               <p>Arrive : {{ circuit.arrive }}</p>
               
-                <a class="btn btn-primary" href="{{ path('client_show', {'id': circuit.id}) }}">Detaile...</a>
-
+                {# <a class="btn btn-primary" href="{{ path('client_show', {'id': circuit.id}) }}">Detaile...</a> #}
+                <a class="btn btn-primary" href="{{path('client_show',{'id':circuit.id})}}">More Details...</a>
                 
               </div>
             </div>
@@ -191,90 +191,35 @@
           <div class="service text-center">
             <span class="icon-paper-plane"></span>
             <h3>Excellence in Travel</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+           
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-3">
           <div class="service text-center">
             <span class="icon-tag"></span>
             <h3>Discover Best</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+           
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-3">
           <div class="service text-center">
             <span class="icon-user"></span>
             <h3>A New Moments of Life</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+           
           </div>
         </div>
         <div class="col-6 col-md-6 col-lg-3">
           <div class="service text-center">
             <span class="icon-support"></span>
             <h3>Joy To Your Journey</h3>
-            <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+           
           </div>
         </div>
       </div>
     </div>
   </div>
 
-  <div class="untree_co-section">
-    <div class="container">
-      <div class="row mb-5 justify-content-center">
-        <div class="col-lg-6 text-center">
-          <h2 class="section-title text-center mb-3">More Services</h2>
-          <p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-        </div>
-      </div>
-      <div class="row align-items-stretch">
-        <div class="col-lg-4 order-lg-1">
-          <div class="h-100"><div class="frame h-100"><div class="feature-img-bg h-100" style="background-image: url('{{ asset('temp/images/hero-slider-1.jpg') }}');"></div></div></div>
-        </div>
 
-        <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-1" >
-
-          <div class="feature-1 d-md-flex">
-            <div class="align-self-center">
-              <span class="flaticon-house display-4 text-primary"></span>
-              <h3>Beautiful Condo</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-          <div class="feature-1 ">
-            <div class="align-self-center">
-              <span class="flaticon-restaurant display-4 text-primary"></span>
-              <h3>Restaurants & Cafe</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-        </div>
-
-        <div class="col-6 col-sm-6 col-lg-4 feature-1-wrap d-md-flex flex-md-column order-lg-3" >
-
-          <div class="feature-1 d-md-flex">
-            <div class="align-self-center">
-              <span class="flaticon-mail display-4 text-primary"></span>
-              <h3>Easy to Connect</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-          <div class="feature-1 d-md-flex">
-            <div class="align-self-center">
-              <span class="flaticon-phone-call display-4 text-primary"></span>
-              <h3>24/7 Support</h3>
-              <p class="mb-0">Even the all-powerful Pointing has no control about the blind texts.</p>
-            </div>
-          </div>
-
-        </div>
-
-      </div>
-    </div>
-  </div>
 
   <div class="py-5 cta-section">
     <div class="container">
