--- a/TestProject/templates/circuit/new.html.twig
+++ b/TestProject/templates/circuit/new.html.twig
@@ -385,14 +385,14 @@
 
                 </nav>
 
-{% block title %}New Circuit{% endblock %}
+
 
 {% block body %}
-    <h1>Create new Circuit</h1>
+    <h2>Ajouter un Circuit</h2>
 
     {{ include('circuit/_form.html.twig') }}
 
-    <a href="{{ path('app_circuit_index') }}">back to list</a>
+    <a href="{{ path('app_circuit_index') }}">retour à la liste</a>
 {% endblock %}
 
 
