--- a/TestProject/templates/classe/serve.html.twig
+++ b/TestProject/templates/classe/serve.html.twig
@@ -80,8 +80,8 @@
       <div class="row align-items-center">
         <div class="col-lg-6 mx-auto text-center">
           <div class="intro-wrap">
-            <h1 class="mb-0">Our Services</h1>
-            <p class="text-white">Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts. </p>
+            <h1 class="mb-0">Votre Destination</h1>
+            <p class="text-white">voyager dans le monde entier et s'amuser </p>
           </div>
         </div>
       </div>
