--- a/TestProject/templates/classe/front.html.twig
+++ b/TestProject/templates/classe/front.html.twig
@@ -79,7 +79,7 @@
 							<li><a href="#">Menu Three</a></li>
 						</ul>
 					</li>
-					<li><a href="services.html">Services</a></li>
+					<li><a href="{{ path('client') }}">Services</a></li>
 					<li><a href="about.html">About</a></li>
 					<li><a href="contact.html">Contact Us</a></li>
 				</ul>
