--- a/TestProject/templates/classe/serve.html.twig
+++ b/TestProject/templates/classe/serve.html.twig
@@ -61,7 +61,7 @@
               <li><a href="#">Menu Three</a></li>
             </ul>
           </li>
-          <li class="active"><a href="services.html">Services</a></li>
+          <li class="active"><a href="{{path('client')}}">Services</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact Us</a></li>
         </ul>
