--- a/TestProject/templates/transport/viewFront.html.twig
+++ b/TestProject/templates/transport/viewFront.html.twig
@@ -1,4 +1,4 @@
-{% include 'classe/serve.html.twig' %}
+{% extends 'baseFront.html.twig' %}
 
 {% block title %}Sélection de Transport{% endblock %}
                         
